# thermal_firmware_full

./: build_output.txt  firmware_clear_github_repo_files_keep_repo.cmd  firmware_delete_and_recreate_github_repo.cmd  firmware_delete_github_repo (1).cmd  firmware_first_upload_no_conflict.cmd  firmware_force_snapshot_upload_keep_repo.cmd  firmware_incremental_update.cmd  firmware_update_no_conflict.cmd  备份 - 快捷方式.lnk
ESP-WROOM-32-OTA/: .gitignore  CMakeLists.txt  my_partitions.csv  sdkconfig  排查指南 - 阿里云收不到数据.md  阿里云物模型配置指南.md
ESP-WROOM-32-OTA/components/BSP/: CMakeLists.txt
ESP-WROOM-32-OTA/components/BSP/BLUE/: BLE.c  BLE.h  BLUE.c  BLUE.h
ESP-WROOM-32-OTA/components/BSP/HTTP/: HTTP.c  HTTP.h
ESP-WROOM-32-OTA/components/BSP/IIC/: iic.h
ESP-WROOM-32-OTA/components/BSP/KEY/: KEY.c  KEY.h
ESP-WROOM-32-OTA/components/BSP/LCD/: ascii_font.h  lib_lcd7735.c  lib_lcd7735.h
ESP-WROOM-32-OTA/components/BSP/LED/: led.c  led.h
ESP-WROOM-32-OTA/components/BSP/MQTT/: MQTT.c  MQTT.h
ESP-WROOM-32-OTA/components/BSP/OTA_STM32/: OTA_STM32.c  OTA_STM32.h  host_ctrl_service.c  host_ctrl_service.h  ota_security_secrets.h  ota_security_secrets.h.example  ota_stm32_cache.c  ota_stm32_cache.h  ota_stm32_ctrl.c  ota_stm32_ctrl.h  ota_stm32_encrypt.c  ota_stm32_encrypt.h  ota_stm32_internal.h  ota_stm32_manifest.c  ota_stm32_manifest.h  ota_stm32_package.c  ota_stm32_package.h  ota_stm32_transfer.c  ota_stm32_transfer.h  ota_stm32_verify.c  ota_stm32_verify.h
ESP-WROOM-32-OTA/components/BSP/RTOS_DEMO/: RTOS_DEMO.c  RTOS_DEMO.h
ESP-WROOM-32-OTA/components/BSP/UART/: UART.c  UART.h
ESP-WROOM-32-OTA/components/BSP/WIFI/: WIFI.c  WIFI.h
ESP-WROOM-32-OTA/components/BSP/YMODEM/: ymodem.c  ymodem.h
ESP-WROOM-32-OTA/components/BSP/app/: app_platform.c  app_platform.h  app_services.c  app_services.h
ESP-WROOM-32-OTA/components/BSP/config/: app_config.c  app_config.h  app_private_config.h.example
ESP-WROOM-32-OTA/components/BSP/drivers/: board_drivers.c  board_drivers.h  led.c  led.h
ESP-WROOM-32-OTA/components/BSP/protocol/: host_uart_rx.c  host_uart_rx.h
ESP-WROOM-32-OTA/components/BSP/services/: app_service_bus.c  app_service_bus.h  ble_provision_service.c  ble_provision_service.h  cloud_mqtt_service.c  cloud_mqtt_service.h  diagnostics_service.c  diagnostics_service.h  host_service.c  host_service.h  ota_service.c  ota_service.h  power_service.c  power_service.h  weather_service.c  weather_service.h
ESP-WROOM-32-OTA/main/: component.mk  main.c
miniprogram-1/: README.md  project.config.json  uploadCloudFunction.sh
miniprogram-1/miniprogram/: app.js  app.json  app.wxss
protocol/: boot_info_v3.h  ota_ctrl_protocol.h  ota_ctrl_protocol_text.h  ota_data_protocol.h  ota_image_header.h  ota_rsa_public_key.generated.h  ota_rsa_public_key.h  ota_rsa_public_key_pem.h
stm32F405RGT6-RedPic1-APP-common/APP/: app_perf_baseline.c  app_perf_baseline.h  esp_host_service.c  page_registry.c  redpic1_app.c  redpic1_app.h  redpic1_thermal.c  redpic1_thermal.h  settings_service.c  settings_service.h
stm32F405RGT6-RedPic1-APP-common/MALLOC/: malloc.c  malloc.h
stm32F405RGT6-RedPic1-APP-common/SDIO/: sdio_sdcard.c  sdio_sdcard.h
stm32F405RGT6-RedPic1-APP1/USER/: LCD.uvprojx  app_slot.sct  app_slot_config.h
stm32F405RGT6-RedPic1-APP2/USER/: LCD.uvprojx  app_slot.sct  app_slot_config.h  main.c
stm32f4VET6-boot/CORE/: startup_stm32f40_41xxx.s
stm32f4VET6-boot/USER/: LCD.uvprojx.bak_phase1_20260427  main.c  (+4 more)
(+313 files in other folders)
