set(src_dirs
            config
            app
            drivers
            protocol
            services
            LCD
            WIFI
            UART
            HTTP
            MQTT
            BLUE
            KEY
            YMODEM
            OTA_STM32
            )

set(include_dirs
            app
            drivers
            protocol
            services
            config
            LCD
            WIFI
            UART
            HTTP
            MQTT
            BLUE
            KEY
            YMODEM
            OTA_STM32
            )

set(requires
            app_update
            bootloader_support
            bt
            driver
            esp_driver_gpio
            esp_driver_i2c
            esp_driver_ledc
            esp_driver_spi
            esp_driver_uart
            esp_event
            esp_http_client
            esp_netif
            nvs_flash
            esp_partition
            esp_rom
            esp_timer
            esp_wifi
            json
            lwip
            mbedtls
            mqtt
            spi_flash
            )

idf_component_register(SRC_DIRS ${src_dirs} INCLUDE_DIRS ${include_dirs} REQUIRES ${requires} EMBED_TXTFILES ${project_dir}/server_certs/root.crt)
component_compile_options(-ffast-math -O3 -Wno-error=format=-Wno-format)
